support any options in mesos, slave recipes. #7
node[:mesos][:master][:hogekey] = "hoge" will be convert to --hogekey=hoge for mesos-master.
node[:mesos][:slave][:hogekey] = "hoge" will be convert to --hogekey=hoge for mesos-slave.

--- a/templates/default/mesos-slave-env.sh.erb
+++ b/templates/default/mesos-slave-env.sh.erb
@@ -8,14 +8,9 @@
 # The mesos master URL to contact. Should be host:port for
 # non-ZooKeeper based masters, otherwise a zk:// or file:// URL.
 
-<% if node[:mesos][:slave][:master_url] then %>
-export MESOS_master=<%= node[:mesos][:slave][:master_url] %>
-<% end %>
-<% if node[:mesos][:slave][:ip] then %>
-export MESOS_ip=<%= node[:mesos][:slave][:ip] %>
+<% if node[:mesos][:slave] %>
+  <% node[:mesos][:slave].each do |key, val| %>
+export MESOS_<%= key %>=<%= val %>
+  <% end %>
 <% end %>
 
-# Other options you're likely to want to set:
-export MESOS_log_dir=<%= node[:mesos][:slave][:log_dir] %>
-export MESOS_work_dir=<%= node[:mesos][:slave][:work_dir] %>
-export MESOS_isolation=<%= node[:mesos][:slave][:isolation] %>
