--- a/templates/default/mesos-master-env.sh.erb
+++ b/templates/default/mesos-master-env.sh.erb
@@ -3,16 +3,10 @@
 # supported as a command-line option is also supported as an environment
 # variable.
 
-<% if node[:mesos][:master][:zk] then %>
-export MESOS_zk=<%= node[:mesos][:master][:zk] %>
-<% end %>
-<% if node[:mesos][:master][:ip] then %>
-export MESOS_ip=<%= node[:mesos][:master][:ip] %>
-<% end %>
-<% if node[:mesos][:cluster_name] then %>
-export MESOS_cluster="<%= node[:mesos][:cluster_name] %>"
+<% if node[:mesos][:master] %>
+  <% node[:mesos][:master].each do |key, val| %>
+export MESOS_<%= key %>=<%= val %>
+  <% end %>
 <% end %>
 
-# Some options you're likely to want to set:
-export MESOS_log_dir=<%= node[:mesos][:master][:log_dir] %>
 
