Allow the use of a hash to populate the /etc/mesos-[slave|master]/* config files

--- a/templates/default/mesos-slave-env.sh.erb
+++ b/templates/default/mesos-slave-env.sh.erb
@@ -10,7 +10,13 @@
 
 <% if node[:mesos][:slave] %>
   <% node[:mesos][:slave].each do |key, val| %>
+    <% if val.respond_to?(:to_path_hash) -%>
+      <% val.to_path_hash('_').each do |path_h| -%>
+export MESOS_<%= key %>_<%= path_h[:path] %>=<%= path_h[:content] %>
+      <% end -%>
+    <% else -%>
 export MESOS_<%= key %>=<%= val %>
+    <% end -%>
   <% end %>
 <% end %>
 
