--- a/templates/default/mesos-master-env.sh.erb
+++ b/templates/default/mesos-master-env.sh.erb
@@ -5,7 +5,13 @@
 
 <% if node[:mesos][:master] %>
   <% node[:mesos][:master].each do |key, val| %>
+    <% if val.respond_to?(:to_path_hash) -%>
+      <% val.to_path_hash('_').each do |path_h| -%>
+export MESOS_<%= key %>_<%= path_h[:path] %>=<%= path_h[:content] %>
+      <% end -%>
+    <% else -%>
 export MESOS_<%= key %>=<%= val %>
+    <% end -%>
   <% end %>
 <% end %>
 
